[package]
name = "gps_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['staticlib']

[build-dependencies]
cbindgen = "0.26.0"


[target.mipsel-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[build]
target = ["nightly-x86_64-unknown-linux-gnu","mipsel-unknown-linux-gnu"]
rustflags = ["-C", "target-feature=+crt-static"]


[unstable]
build-std = ["std", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]

[dependencies]
# c_str_macro = "1.0.3"


[profile.release]
opt-level = 1      

[profile.dev]
opt-level = 1      #mips target bs